Solving the import problem with jsp, i clicked on the option "clean an build"

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,12 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.mysql-connector-java-5.1.38-bin.jar=F:\\Marcella\\Livros e Projetos Programa\u00e7\u00e3o\\1 - Caelum\\Java Web Caelum\\JavaWebCaelumfj21\\mysql-connector-java-5.1.38-bin.jar
+file.reference.java-beans=src/java/beans
+file.reference.java-dao=src/java/dao
+file.reference.java-persistence=src/java/persistence
+file.reference.java-servlet=src/java/servlet
+file.reference.jsp-api.jar=C:\\apache-tomcat-7.0.73\\lib\\jsp-api.jar
+file.reference.mysql-connector-java-5.1.38-bin.jar=mysql-connector-java-5.1.38-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +43,12 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.38-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.38-bin.jar}:\
+    ${file.reference.java-beans}:\
+    ${file.reference.java-dao}:\
+    ${file.reference.java-persistence}:\
+    ${file.reference.java-servlet}:\
+    ${file.reference.jsp-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
