Testing Taglib and JSTL

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.java-beans=src/java/beans
-file.reference.java-dao=src/java/dao
-file.reference.java-persistence=src/java/persistence
-file.reference.java-servlet=src/java/servlet
 file.reference.jsp-api.jar=C:\\apache-tomcat-7.0.73\\lib\\jsp-api.jar
+file.reference.jstl-1.2.jar=jstl-1.2.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=mysql-connector-java-5.1.38-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -44,11 +41,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.38-bin.jar}:\
-    ${file.reference.java-beans}:\
-    ${file.reference.java-dao}:\
-    ${file.reference.java-persistence}:\
-    ${file.reference.java-servlet}:\
-    ${file.reference.jsp-api.jar}
+    ${file.reference.jsp-api.jar}:\
+    ${file.reference.jstl-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
